--- a/package/translate/da.po
+++ b/package/translate/da.po
@@ -2,42 +2,48 @@
 # Copyright (C) Kpple 2020
 # This file is distributed under the same license as the Kpple Menu package.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: KppleMenu \n"
+"Project-Id-Version: KppleMenu\n"
 "Report-Msgid-Bugs-To: https://github.com/kppleos\n"
 "POT-Creation-Date: 2020-08-26 09:18+0200\n"
-"PO-Revision-Date: 2020-05-20\n"
+"PO-Revision-Date: 2020-07-11 15:29+0200\n"
 "Last-Translator: Borgniet Rudy <borgniet.rudy@hotmail.com>\n"
-"Language: uk\n"
+"Language-Team: \n"
+"Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 2.3.1\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../contents/config/config.qml
 msgid "Advanced"
-msgstr "Розширений"
+msgstr "Avanceret"
 
 #: ../contents/config/config.qml
 msgid "Help"
-msgstr "Довідка"
+msgstr "Hjælp"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Adapt the links with your own command lines"
-msgstr "Адаптуйте посилання за допомогою власних командних рядків"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
-msgid "( Warning : This is the expert mode, do not change anything if the application is working properly. )"
-msgstr "( Попередження : це експертний режим, не змінюйте нічого, якщо програма працює належним чином. )"
+msgid ""
+"( Warning : This is the expert mode, do not change anything if the "
+"application is working properly. )"
+msgstr ""
+"( Advarsel: Lad være med at ændre noget hvis programmet fungerer efter "
+"hensigten )"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Show advanced mode"
-msgstr "Показати розширений режим"
+msgstr "Vis avanceret tilstand"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "About This Computer :"
-msgstr "Про цей комп’ютер :"
+msgstr "Om denne computer :"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "kinfocenter"
@@ -45,7 +51,7 @@ msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "System Preferences :"
-msgstr "Налаштування системи :"
+msgstr "Systemindstillinger :"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "systemsettings5"
@@ -53,7 +59,7 @@ msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "App Store :"
-msgstr "App Store :"
+msgstr "Software Center:"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "plasma-discover"
@@ -61,7 +67,7 @@ msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Force Quit :"
-msgstr "Сила кинути :"
+msgstr "Tvungen afbrydelse:"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "xkill"
@@ -69,7 +75,7 @@ msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Sleep :"
-msgstr "Пауза активність :"
+msgstr "Dvale:"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "systemctl suspend"
@@ -77,7 +83,7 @@ msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Restart :"
-msgstr "Щоб перезапустити :"
+msgstr "Genstart:"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "/sbin/reboot"
@@ -85,7 +91,7 @@ msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Shut Down :"
-msgstr "Вимкнути :"
+msgstr "Luk ned:"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "/sbin/shutdown now"
@@ -93,7 +99,7 @@ msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Lock Screen :"
-msgstr "Екран блокування :"
+msgstr "Låseskærm :"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "qdbus org.freedesktop.ScreenSaver /ScreenSaver Lock"
@@ -101,7 +107,7 @@ msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Log Out :"
-msgstr "Вийти :"
+msgstr "Log ud :"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "qdbus org.kde.ksmserver /KSMServer logout 0 0 0"
@@ -109,60 +115,63 @@ msgstr ""
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Do you need help ?"
-msgstr "Вам потрібна допомога ?"
+msgstr "Skal du bruge hjælp?"
 
 #: ../contents/ui/config/configHelp.qml
 msgid "About Kpple"
-msgstr "Про Kpple"
+msgstr "Om Kpple"
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Consult the user's guide"
-msgstr "Зверніться до посібника користувача"
+msgstr "Konsultér bruger manualen"
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Repport a bug"
-msgstr "Повідомити про помилку"
+msgstr "Rapportér en fejl"
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Donate for the project"
-msgstr "Пожертвуйте на проект"
+msgstr "Donér til projektet"
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Couldn't find help ? Contact us at : info.kpple@gmail.com"
-msgstr "Не знайшли допомогу ? Звертайтесь до нас за наступною адресою : info.kpple@gmail.com"
+msgstr "Kunne du ikke finde hjælp? Kontakt os på: info.kpple@gmail.com"
 
 #: ../contents/ui/main.qml
 msgid "About This Computer"
-msgstr "Про цей комп’ютер"
+msgstr "Om denne computer"
 
 #: ../contents/ui/main.qml
 msgid "System Preferences..."
-msgstr "Налаштування системи..."
+msgstr "Systemindstillinger..."
 
 #: ../contents/ui/main.qml
 msgid "App Store..."
-msgstr "App Store..."
+msgstr "Software Center..."
 
 #: ../contents/ui/main.qml
 msgid "Force Quit..."
-msgstr "Сила кинути..."
+msgstr "Tvungen afbrydelse..."
 
 #: ../contents/ui/main.qml
 msgid "Sleep"
-msgstr "Пауза активність"
+msgstr "Gå i dvale"
 
 #: ../contents/ui/main.qml
 msgid "Restart..."
-msgstr "Щоб перезапустити..."
+msgstr "Genstart..."
 
 #: ../contents/ui/main.qml
 msgid "Shut Down..."
-msgstr "Вимкнути..."
+msgstr "Luk ned..."
 
 #: ../contents/ui/main.qml
 msgid "Lock Screen"
-msgstr "Екран блокування"
+msgstr "Låseskærm"
 
 #: ../contents/ui/main.qml
 msgid "Log Out"
-msgstr "Вийти"
+msgstr "Log ud"
+
+#~ msgid "Adapt the links with your own command line"
+#~ msgstr "Tilpas kommandoerne så de svarer til dit system"
