--- a/package/translate/es.po
+++ b/package/translate/es.po
@@ -6,50 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KppleMenu \n"
-"Report-Msgid-Bugs-To: https://github.com/kppleos/org.kpple.kppleMenu\n"
-"POT-Creation-Date: 2020-05-19\n"
+"Report-Msgid-Bugs-To: https://github.com/kppleos\n"
+"POT-Creation-Date: 2020-08-26 09:18+0200\n"
 "PO-Revision-Date: 2020-05-19\n"
 "Last-Translator: Borgniet Rudy <borgniet.rudy@hotmail.com>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-
-#: ../contents/ui/main.qml
-msgid "About This Computer"
-msgstr "Acerca de esta computadora" 
-
-#: ../contents/ui/main.qml
-msgid "System Preferences..."
-msgstr "Preferencias del sistema..." 
-
-#: ../contents/ui/main.qml
-msgid "App Store..."
-msgstr "App Store..." 
-
-#: ../contents/ui/main.qml
-msgid "Force Quit..."
-msgstr "Forzando a salir..." 
-
-#: ../contents/ui/main.qml
-msgid "Sleep"
-msgstr "Suspender la actividad"
-
-#: ../contents/ui/main.qml
-msgid "Restart..."
-msgstr "Reinicie..."
-
-#: ../contents/ui/main.qml
-msgid "Shut Down..."
-msgstr "Apagar..."
-
-#: ../contents/ui/main.qml
-msgid "Lock Screen"
-msgstr "Bloquear pantalla"
-
-#: ../contents/ui/main.qml
-msgid "Log Out"
-msgstr "Desconectarse"
 
 #: ../contents/config/config.qml
 msgid "Advanced"
@@ -60,8 +24,8 @@ msgid "Help"
 msgstr "Ayuda"
 
 #: ../contents/ui/config/configGeneral.qml
-msgid "Adapt the links with your own command line"
-msgstr "Adapte los enlaces con sus propias líneas de comando"
+msgid "Adapt the links with your own command lines"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "( Warning : This is the expert mode, do not change anything if the application is working properly. )"
@@ -73,39 +37,75 @@ msgstr "Mostrar el modo avanzado"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "About This Computer :"
-msgstr "Acerca de esta computadora :" 
+msgstr "Acerca de esta computadora :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "kinfocenter"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "System Preferences :"
-msgstr "Preferencias del sistema :" 
+msgstr "Preferencias del sistema :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "systemsettings5"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "App Store :"
-msgstr "App Store :" 
+msgstr "App Store :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "plasma-discover"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Force Quit :"
-msgstr "Forzando a salir :" 
+msgstr "Forzando a salir :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "xkill"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Sleep :"
 msgstr "Suspender la actividad :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "systemctl suspend"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Restart :"
 msgstr "Reinicie :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "/sbin/reboot"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Shut Down :"
 msgstr "Apagar :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "/sbin/shutdown now"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Lock Screen :"
 msgstr "Bloquear pantalla :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "qdbus org.freedesktop.ScreenSaver /ScreenSaver Lock"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Log Out :"
 msgstr "Desconectarse :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "qdbus org.kde.ksmserver /KSMServer logout 0 0 0"
+msgstr ""
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Do you need help ?"
@@ -131,6 +131,41 @@ msgstr "Donaciones para el proyecto"
 msgid "Couldn't find help ? Contact us at : info.kpple@gmail.com"
 msgstr "¿No pudiste encontrar ayuda ? Contáctenos en : info.kpple@gmail.com"
 
- 
- 
- 
+#: ../contents/ui/main.qml
+msgid "About This Computer"
+msgstr "Acerca de esta computadora"
+
+#: ../contents/ui/main.qml
+msgid "System Preferences..."
+msgstr "Preferencias del sistema..."
+
+#: ../contents/ui/main.qml
+msgid "App Store..."
+msgstr "App Store..."
+
+#: ../contents/ui/main.qml
+msgid "Force Quit..."
+msgstr "Forzando a salir..."
+
+#: ../contents/ui/main.qml
+msgid "Sleep"
+msgstr "Suspender la actividad"
+
+#: ../contents/ui/main.qml
+msgid "Restart..."
+msgstr "Reinicie..."
+
+#: ../contents/ui/main.qml
+msgid "Shut Down..."
+msgstr "Apagar..."
+
+#: ../contents/ui/main.qml
+msgid "Lock Screen"
+msgstr "Bloquear pantalla"
+
+#: ../contents/ui/main.qml
+msgid "Log Out"
+msgstr "Desconectarse"
+
+#~ msgid "Adapt the links with your own command line"
+#~ msgstr "Adapte los enlaces con sus propias líneas de comando"
