--- a/package/translate/fi.po
+++ b/package/translate/fi.po
@@ -6,50 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KppleMenu \n"
-"Report-Msgid-Bugs-To: https://github.com/kppleos/org.kpple.kppleMenu\n"
-"POT-Creation-Date: 2020-05-19\n"
+"Report-Msgid-Bugs-To: https://github.com/kppleos\n"
+"POT-Creation-Date: 2020-08-26 09:18+0200\n"
 "PO-Revision-Date: 2020-05-20\n"
 "Last-Translator: Borgniet Rudy <borgniet.rudy@hotmail.com>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-
-#: ../contents/ui/main.qml
-msgid "About This Computer"
-msgstr "Tietoja tästä tietokoneesta" 
-
-#: ../contents/ui/main.qml
-msgid "System Preferences..."
-msgstr "Järjestelmäasetukset..." 
-
-#: ../contents/ui/main.qml
-msgid "App Store..."
-msgstr "Sovelluskauppa..." 
-
-#: ../contents/ui/main.qml
-msgid "Force Quit..."
-msgstr "Pakota lopettaa..." 
-
-#: ../contents/ui/main.qml
-msgid "Sleep"
-msgstr "Keskeytä toiminta"
-
-#: ../contents/ui/main.qml
-msgid "Restart..."
-msgstr "Käynnistää uudelleen..."
-
-#: ../contents/ui/main.qml
-msgid "Shut Down..."
-msgstr "Kytke pois päältä..."
-
-#: ../contents/ui/main.qml
-msgid "Lock Screen"
-msgstr "Lukitusnäyttö"
-
-#: ../contents/ui/main.qml
-msgid "Log Out"
-msgstr "Kirjautua ulos"
 
 #: ../contents/config/config.qml
 msgid "Advanced"
@@ -73,39 +37,75 @@ msgstr "Näytä edistynyt tila"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "About This Computer :"
-msgstr "Tietoja tästä tietokoneesta :" 
+msgstr "Tietoja tästä tietokoneesta :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "kinfocenter"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "System Preferences :"
-msgstr "Järjestelmäasetukset :" 
+msgstr "Järjestelmäasetukset :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "systemsettings5"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "App Store :"
-msgstr "Sovelluskauppa :" 
+msgstr "Sovelluskauppa :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "plasma-discover"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Force Quit :"
-msgstr "Pakota lopettaa :" 
+msgstr "Pakota lopettaa :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "xkill"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Sleep :"
 msgstr "Keskeytä toiminta :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "systemctl suspend"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Restart :"
 msgstr "Käynnistää uudelleen :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "/sbin/reboot"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Shut Down :"
 msgstr "Kytke pois päältä :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "/sbin/shutdown now"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Lock Screen :"
 msgstr "Lukitusnäyttö :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "qdbus org.freedesktop.ScreenSaver /ScreenSaver Lock"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Log Out :"
 msgstr "Kirjautua ulos :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "qdbus org.kde.ksmserver /KSMServer logout 0 0 0"
+msgstr ""
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Do you need help ?"
@@ -131,4 +131,38 @@ msgstr "Lahjoita projektiin"
 msgid "Couldn't find help ? Contact us at : info.kpple@gmail.com"
 msgstr "Etkö löytänyt apua ? Ota yhteyttä seuraavaan osoitteeseen : info.kpple@gmail.com"
 
- 
+#: ../contents/ui/main.qml
+msgid "About This Computer"
+msgstr "Tietoja tästä tietokoneesta"
+
+#: ../contents/ui/main.qml
+msgid "System Preferences..."
+msgstr "Järjestelmäasetukset..."
+
+#: ../contents/ui/main.qml
+msgid "App Store..."
+msgstr "Sovelluskauppa..."
+
+#: ../contents/ui/main.qml
+msgid "Force Quit..."
+msgstr "Pakota lopettaa..."
+
+#: ../contents/ui/main.qml
+msgid "Sleep"
+msgstr "Keskeytä toiminta"
+
+#: ../contents/ui/main.qml
+msgid "Restart..."
+msgstr "Käynnistää uudelleen..."
+
+#: ../contents/ui/main.qml
+msgid "Shut Down..."
+msgstr "Kytke pois päältä..."
+
+#: ../contents/ui/main.qml
+msgid "Lock Screen"
+msgstr "Lukitusnäyttö"
+
+#: ../contents/ui/main.qml
+msgid "Log Out"
+msgstr "Kirjautua ulos"
