--- a/package/translate/fr.po
+++ b/package/translate/fr.po
@@ -6,50 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KppleMenu \n"
-"Report-Msgid-Bugs-To: https://github.com/kppleos/org.kpple.kppleMenu\n"
-"POT-Creation-Date: 2020-05-19\n"
+"Report-Msgid-Bugs-To: https://github.com/kppleos\n"
+"POT-Creation-Date: 2020-08-26 09:18+0200\n"
 "PO-Revision-Date: 2020-05-20\n"
 "Last-Translator: Borgniet Rudy <borgniet.rudy@hotmail.com>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-
-#: ../contents/ui/main.qml
-msgid "About This Computer"
-msgstr "À propos de cet ordinateur" 
-
-#: ../contents/ui/main.qml
-msgid "System Preferences..."
-msgstr "Préférences Système..." 
-
-#: ../contents/ui/main.qml
-msgid "App Store..."
-msgstr "App Store..." 
-
-#: ../contents/ui/main.qml
-msgid "Force Quit..."
-msgstr "Forcer à quitter..." 
-
-#: ../contents/ui/main.qml
-msgid "Sleep"
-msgstr "Suspendre l’activité"
-
-#: ../contents/ui/main.qml
-msgid "Restart..."
-msgstr "Redémarrer..."
-
-#: ../contents/ui/main.qml
-msgid "Shut Down..."
-msgstr "Éteindre..."
-
-#: ../contents/ui/main.qml
-msgid "Lock Screen"
-msgstr "Écran de verrouillage"
-
-#: ../contents/ui/main.qml
-msgid "Log Out"
-msgstr "Fermer la session"
 
 #: ../contents/config/config.qml
 msgid "Advanced"
@@ -73,39 +37,75 @@ msgstr "Afficher le mode avancé"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "About This Computer :"
-msgstr "À propos de cet ordinateur :" 
+msgstr "À propos de cet ordinateur :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "kinfocenter"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "System Preferences :"
-msgstr "Préférences Système :" 
+msgstr "Préférences Système :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "systemsettings5"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "App Store :"
-msgstr "App Store :" 
+msgstr "App Store :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "plasma-discover"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Force Quit :"
-msgstr "Forcer à quitter :" 
+msgstr "Forcer à quitter :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "xkill"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Sleep :"
 msgstr "Suspendre l’activité :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "systemctl suspend"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Restart :"
 msgstr "Redémarrer :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "/sbin/reboot"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Shut Down :"
 msgstr "Éteindre :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "/sbin/shutdown now"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Lock Screen :"
 msgstr "Écran de verrouillage :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "qdbus org.freedesktop.ScreenSaver /ScreenSaver Lock"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Log Out :"
 msgstr "Fermer la session :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "qdbus org.kde.ksmserver /KSMServer logout 0 0 0"
+msgstr ""
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Do you need help ?"
@@ -131,3 +131,38 @@ msgstr "Faire un don pour le projet"
 msgid "Couldn't find help ? Contact us at : info.kpple@gmail.com"
 msgstr "Vous n'avez pas trouvé d'aide ? Contactez-nous à l'adresse suivante : info.kpple@gmail.com"
 
+#: ../contents/ui/main.qml
+msgid "About This Computer"
+msgstr "À propos de cet ordinateur"
+
+#: ../contents/ui/main.qml
+msgid "System Preferences..."
+msgstr "Préférences Système..."
+
+#: ../contents/ui/main.qml
+msgid "App Store..."
+msgstr "App Store..."
+
+#: ../contents/ui/main.qml
+msgid "Force Quit..."
+msgstr "Forcer à quitter..."
+
+#: ../contents/ui/main.qml
+msgid "Sleep"
+msgstr "Suspendre l’activité"
+
+#: ../contents/ui/main.qml
+msgid "Restart..."
+msgstr "Redémarrer..."
+
+#: ../contents/ui/main.qml
+msgid "Shut Down..."
+msgstr "Éteindre..."
+
+#: ../contents/ui/main.qml
+msgid "Lock Screen"
+msgstr "Écran de verrouillage"
+
+#: ../contents/ui/main.qml
+msgid "Log Out"
+msgstr "Fermer la session"
