--- a/package/translate/it.po
+++ b/package/translate/it.po
@@ -6,50 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KppleMenu \n"
-"Report-Msgid-Bugs-To: https://github.com/kppleos/org.kpple.kppleMenu\n"
-"POT-Creation-Date: 2020-05-19\n"
+"Report-Msgid-Bugs-To: https://github.com/kppleos\n"
+"POT-Creation-Date: 2020-08-26 09:18+0200\n"
 "PO-Revision-Date: 2020-05-20\n"
 "Last-Translator: Borgniet Rudy <borgniet.rudy@hotmail.com>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-
-#: ../contents/ui/main.qml
-msgid "About This Computer"
-msgstr "A proposito di questo computer" 
-
-#: ../contents/ui/main.qml
-msgid "System Preferences..."
-msgstr "Preferenze di Sistema..." 
-
-#: ../contents/ui/main.qml
-msgid "App Store..."
-msgstr "App Store..." 
-
-#: ../contents/ui/main.qml
-msgid "Force Quit..."
-msgstr "Costringere ad andarsene..." 
-
-#: ../contents/ui/main.qml
-msgid "Sleep"
-msgstr "Metti in pausa l'attività"
-
-#: ../contents/ui/main.qml
-msgid "Restart..."
-msgstr "Riavvio..."
-
-#: ../contents/ui/main.qml
-msgid "Shut Down..."
-msgstr "Spegnere..."
-
-#: ../contents/ui/main.qml
-msgid "Lock Screen"
-msgstr "Blocca schermo"
-
-#: ../contents/ui/main.qml
-msgid "Log Out"
-msgstr "Disconnettersi"
 
 #: ../contents/config/config.qml
 msgid "Advanced"
@@ -73,39 +37,75 @@ msgstr "Mostra modalità avanzata"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "About This Computer :"
-msgstr "A proposito di questo computer :" 
+msgstr "A proposito di questo computer :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "kinfocenter"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "System Preferences :"
-msgstr "Preferenze di Sistema :" 
+msgstr "Preferenze di Sistema :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "systemsettings5"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "App Store :"
-msgstr "App Store :" 
+msgstr "App Store :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "plasma-discover"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Force Quit :"
-msgstr "Costringere ad andarsene :" 
+msgstr "Costringere ad andarsene :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "xkill"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Sleep :"
 msgstr "Metti in pausa l'attività :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "systemctl suspend"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Restart :"
 msgstr "Riavvio :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "/sbin/reboot"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Shut Down :"
 msgstr "Spegnere :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "/sbin/shutdown now"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Lock Screen :"
 msgstr "Blocca schermo :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "qdbus org.freedesktop.ScreenSaver /ScreenSaver Lock"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Log Out :"
 msgstr "Disconnettersi :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "qdbus org.kde.ksmserver /KSMServer logout 0 0 0"
+msgstr ""
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Do you need help ?"
@@ -131,4 +131,38 @@ msgstr "Dona per il progetto"
 msgid "Couldn't find help ? Contact us at : info.kpple@gmail.com"
 msgstr "Non hai trovato aiuto? Contattaci al seguente indirizzo : info.kpple@gmail.com"
 
- 
+#: ../contents/ui/main.qml
+msgid "About This Computer"
+msgstr "A proposito di questo computer"
+
+#: ../contents/ui/main.qml
+msgid "System Preferences..."
+msgstr "Preferenze di Sistema..."
+
+#: ../contents/ui/main.qml
+msgid "App Store..."
+msgstr "App Store..."
+
+#: ../contents/ui/main.qml
+msgid "Force Quit..."
+msgstr "Costringere ad andarsene..."
+
+#: ../contents/ui/main.qml
+msgid "Sleep"
+msgstr "Metti in pausa l'attività"
+
+#: ../contents/ui/main.qml
+msgid "Restart..."
+msgstr "Riavvio..."
+
+#: ../contents/ui/main.qml
+msgid "Shut Down..."
+msgstr "Spegnere..."
+
+#: ../contents/ui/main.qml
+msgid "Lock Screen"
+msgstr "Blocca schermo"
+
+#: ../contents/ui/main.qml
+msgid "Log Out"
+msgstr "Disconnettersi"
