--- a/package/translate/ja.po
+++ b/package/translate/ja.po
@@ -6,50 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KppleMenu \n"
-"Report-Msgid-Bugs-To: https://github.com/kppleos/org.kpple.kppleMenu\n"
-"POT-Creation-Date: 2020-05-19\n"
+"Report-Msgid-Bugs-To: https://github.com/kppleos\n"
+"POT-Creation-Date: 2020-08-26 09:18+0200\n"
 "PO-Revision-Date: 2020-05-20\n"
 "Last-Translator: Borgniet Rudy <borgniet.rudy@hotmail.com>\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-
-#: ../contents/ui/main.qml
-msgid "About This Computer"
-msgstr "このコンピュータについて" 
-
-#: ../contents/ui/main.qml
-msgid "System Preferences..."
-msgstr "システム環境設定..." 
-
-#: ../contents/ui/main.qml
-msgid "App Store..."
-msgstr "アプリストア..." 
-
-#: ../contents/ui/main.qml
-msgid "Force Quit..."
-msgstr "強制終了..." 
-
-#: ../contents/ui/main.qml
-msgid "Sleep"
-msgstr "アクティビティを一時停止"
-
-#: ../contents/ui/main.qml
-msgid "Restart..."
-msgstr "再起動します..."
-
-#: ../contents/ui/main.qml
-msgid "Shut Down..."
-msgstr "スイッチを切る..."
-
-#: ../contents/ui/main.qml
-msgid "Lock Screen"
-msgstr "ロック画面"
-
-#: ../contents/ui/main.qml
-msgid "Log Out"
-msgstr "ログアウト"
 
 #: ../contents/config/config.qml
 msgid "Advanced"
@@ -73,39 +37,75 @@ msgstr "詳細モードを表示"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "About This Computer :"
-msgstr "このコンピュータについて :" 
+msgstr "このコンピュータについて :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "kinfocenter"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "System Preferences :"
-msgstr "システム環境設定 :" 
+msgstr "システム環境設定 :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "systemsettings5"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "App Store :"
-msgstr "アプリストア :" 
+msgstr "アプリストア :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "plasma-discover"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Force Quit :"
-msgstr "強制終了 :" 
+msgstr "強制終了 :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "xkill"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Sleep :"
 msgstr "アクティビティを一時停止 :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "systemctl suspend"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Restart :"
 msgstr "再起動します :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "/sbin/reboot"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Shut Down :"
 msgstr "スイッチを切る :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "/sbin/shutdown now"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Lock Screen :"
 msgstr "ロック画面 :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "qdbus org.freedesktop.ScreenSaver /ScreenSaver Lock"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Log Out :"
 msgstr "ログアウト :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "qdbus org.kde.ksmserver /KSMServer logout 0 0 0"
+msgstr ""
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Do you need help ?"
@@ -131,4 +131,38 @@ msgstr "プロジェクトに寄付する"
 msgid "Couldn't find help ? Contact us at : info.kpple@gmail.com"
 msgstr "ヘルプが見つかりませんでしたか？次のアドレスまでご連絡ください : info.kpple@gmail.com"
 
- 
+#: ../contents/ui/main.qml
+msgid "About This Computer"
+msgstr "このコンピュータについて"
+
+#: ../contents/ui/main.qml
+msgid "System Preferences..."
+msgstr "システム環境設定..."
+
+#: ../contents/ui/main.qml
+msgid "App Store..."
+msgstr "アプリストア..."
+
+#: ../contents/ui/main.qml
+msgid "Force Quit..."
+msgstr "強制終了..."
+
+#: ../contents/ui/main.qml
+msgid "Sleep"
+msgstr "アクティビティを一時停止"
+
+#: ../contents/ui/main.qml
+msgid "Restart..."
+msgstr "再起動します..."
+
+#: ../contents/ui/main.qml
+msgid "Shut Down..."
+msgstr "スイッチを切る..."
+
+#: ../contents/ui/main.qml
+msgid "Lock Screen"
+msgstr "ロック画面"
+
+#: ../contents/ui/main.qml
+msgid "Log Out"
+msgstr "ログアウト"
