--- a/package/translate/ko.po
+++ b/package/translate/ko.po
@@ -6,50 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KppleMenu \n"
-"Report-Msgid-Bugs-To: https://github.com/kppleos/org.kpple.kppleMenu\n"
-"POT-Creation-Date: 2020-05-19\n"
+"Report-Msgid-Bugs-To: https://github.com/kppleos\n"
+"POT-Creation-Date: 2020-08-26 09:18+0200\n"
 "PO-Revision-Date: 2020-05-20\n"
 "Last-Translator: Borgniet Rudy <borgniet.rudy@hotmail.com>\n"
 "Language: ko\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-
-#: ../contents/ui/main.qml
-msgid "About This Computer"
-msgstr "이 컴퓨터에 대하여" 
-
-#: ../contents/ui/main.qml
-msgid "System Preferences..."
-msgstr "시스템 환경 설정..." 
-
-#: ../contents/ui/main.qml
-msgid "App Store..."
-msgstr "앱 스토어..." 
-
-#: ../contents/ui/main.qml
-msgid "Force Quit..."
-msgstr "강제 종료..." 
-
-#: ../contents/ui/main.qml
-msgid "Sleep"
-msgstr "활동 일시 중지"
-
-#: ../contents/ui/main.qml
-msgid "Restart..."
-msgstr "재시작하기 위해..."
-
-#: ../contents/ui/main.qml
-msgid "Shut Down..."
-msgstr "끄다..."
-
-#: ../contents/ui/main.qml
-msgid "Lock Screen"
-msgstr "잠금 화면"
-
-#: ../contents/ui/main.qml
-msgid "Log Out"
-msgstr "로그 아웃"
 
 #: ../contents/config/config.qml
 msgid "Advanced"
@@ -73,39 +37,75 @@ msgstr "고급 모드 표시"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "About This Computer :"
-msgstr "이 컴퓨터에 대하여 :" 
+msgstr "이 컴퓨터에 대하여 :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "kinfocenter"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "System Preferences :"
-msgstr "시스템 환경 설정 :" 
+msgstr "시스템 환경 설정 :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "systemsettings5"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "App Store :"
-msgstr "앱 스토어 :" 
+msgstr "앱 스토어 :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "plasma-discover"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Force Quit :"
-msgstr "강제 종료 :" 
+msgstr "강제 종료 :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "xkill"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Sleep :"
 msgstr "활동 일시 중지 :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "systemctl suspend"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Restart :"
 msgstr "재시작하기 위해 :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "/sbin/reboot"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Shut Down :"
 msgstr "끄다 :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "/sbin/shutdown now"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Lock Screen :"
 msgstr "잠금 화면 :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "qdbus org.freedesktop.ScreenSaver /ScreenSaver Lock"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Log Out :"
 msgstr "로그 아웃 :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "qdbus org.kde.ksmserver /KSMServer logout 0 0 0"
+msgstr ""
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Do you need help ?"
@@ -131,4 +131,38 @@ msgstr "프로젝트 기부"
 msgid "Couldn't find help ? Contact us at : info.kpple@gmail.com"
 msgstr "도움이 없습니까? 다음 주소로 문의하십시오 : info.kpple@gmail.com"
 
- 
+#: ../contents/ui/main.qml
+msgid "About This Computer"
+msgstr "이 컴퓨터에 대하여"
+
+#: ../contents/ui/main.qml
+msgid "System Preferences..."
+msgstr "시스템 환경 설정..."
+
+#: ../contents/ui/main.qml
+msgid "App Store..."
+msgstr "앱 스토어..."
+
+#: ../contents/ui/main.qml
+msgid "Force Quit..."
+msgstr "강제 종료..."
+
+#: ../contents/ui/main.qml
+msgid "Sleep"
+msgstr "활동 일시 중지"
+
+#: ../contents/ui/main.qml
+msgid "Restart..."
+msgstr "재시작하기 위해..."
+
+#: ../contents/ui/main.qml
+msgid "Shut Down..."
+msgstr "끄다..."
+
+#: ../contents/ui/main.qml
+msgid "Lock Screen"
+msgstr "잠금 화면"
+
+#: ../contents/ui/main.qml
+msgid "Log Out"
+msgstr "로그 아웃"
