--- a/package/translate/nl.po
+++ b/package/translate/nl.po
@@ -6,50 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KppleMenu \n"
-"Report-Msgid-Bugs-To: https://github.com/kppleos/org.kpple.kppleMenu\n"
-"POT-Creation-Date: 2020-05-19\n"
+"Report-Msgid-Bugs-To: https://github.com/kppleos\n"
+"POT-Creation-Date: 2020-08-26 09:18+0200\n"
 "PO-Revision-Date: 2020-05-20\n"
 "Last-Translator: Borgniet Rudy <borgniet.rudy@hotmail.com>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-
-#: ../contents/ui/main.qml
-msgid "About This Computer"
-msgstr "Over deze computer" 
-
-#: ../contents/ui/main.qml
-msgid "System Preferences..."
-msgstr "Systeem voorkeuren..." 
-
-#: ../contents/ui/main.qml
-msgid "App Store..."
-msgstr "App Winkel..." 
-
-#: ../contents/ui/main.qml
-msgid "Force Quit..."
-msgstr "Geforceerd beëindigen..." 
-
-#: ../contents/ui/main.qml
-msgid "Sleep"
-msgstr "Activiteit onderbreken"
-
-#: ../contents/ui/main.qml
-msgid "Restart..."
-msgstr "Herstarten..."
-
-#: ../contents/ui/main.qml
-msgid "Shut Down..."
-msgstr "Uitzetten..."
-
-#: ../contents/ui/main.qml
-msgid "Lock Screen"
-msgstr "Vergrendel scherm"
-
-#: ../contents/ui/main.qml
-msgid "Log Out"
-msgstr "Uitloggen"
 
 #: ../contents/config/config.qml
 msgid "Advanced"
@@ -73,39 +37,75 @@ msgstr "Toon geavanceerde modus"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "About This Computer :"
-msgstr "Over deze computer :" 
+msgstr "Over deze computer :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "kinfocenter"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "System Preferences :"
-msgstr "Systeem voorkeuren :" 
+msgstr "Systeem voorkeuren :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "systemsettings5"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "App Store :"
-msgstr "App Winkel :" 
+msgstr "App Winkel :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "plasma-discover"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Force Quit :"
-msgstr "Geforceerd beëindigen :" 
+msgstr "Geforceerd beëindigen :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "xkill"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Sleep :"
 msgstr "Activiteit onderbreken :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "systemctl suspend"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Restart :"
 msgstr "Herstarten :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "/sbin/reboot"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Shut Down :"
 msgstr "Uitzetten :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "/sbin/shutdown now"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Lock Screen :"
 msgstr "Vergrendel scherm :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "qdbus org.freedesktop.ScreenSaver /ScreenSaver Lock"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Log Out :"
 msgstr "Uitloggen :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "qdbus org.kde.ksmserver /KSMServer logout 0 0 0"
+msgstr ""
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Do you need help ?"
@@ -131,4 +131,38 @@ msgstr "Doneer voor het project"
 msgid "Couldn't find help ? Contact us at : info.kpple@gmail.com"
 msgstr "Hulp niet gevonden? Neem contact met ons op op het volgende adres : info.kpple@gmail.com"
 
- 
+#: ../contents/ui/main.qml
+msgid "About This Computer"
+msgstr "Over deze computer"
+
+#: ../contents/ui/main.qml
+msgid "System Preferences..."
+msgstr "Systeem voorkeuren..."
+
+#: ../contents/ui/main.qml
+msgid "App Store..."
+msgstr "App Winkel..."
+
+#: ../contents/ui/main.qml
+msgid "Force Quit..."
+msgstr "Geforceerd beëindigen..."
+
+#: ../contents/ui/main.qml
+msgid "Sleep"
+msgstr "Activiteit onderbreken"
+
+#: ../contents/ui/main.qml
+msgid "Restart..."
+msgstr "Herstarten..."
+
+#: ../contents/ui/main.qml
+msgid "Shut Down..."
+msgstr "Uitzetten..."
+
+#: ../contents/ui/main.qml
+msgid "Lock Screen"
+msgstr "Vergrendel scherm"
+
+#: ../contents/ui/main.qml
+msgid "Log Out"
+msgstr "Uitloggen"
