--- a/package/translate/pt.po
+++ b/package/translate/pt.po
@@ -6,50 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KppleMenu \n"
-"Report-Msgid-Bugs-To: https://github.com/kppleos/org.kpple.kppleMenu\n"
-"POT-Creation-Date: 2020-05-19\n"
+"Report-Msgid-Bugs-To: https://github.com/kppleos\n"
+"POT-Creation-Date: 2020-08-26 09:18+0200\n"
 "PO-Revision-Date: 2020-05-20\n"
 "Last-Translator: Borgniet Rudy <borgniet.rudy@hotmail.com>\n"
 "Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-
-#: ../contents/ui/main.qml
-msgid "About This Computer"
-msgstr "Sobre este computador" 
-
-#: ../contents/ui/main.qml
-msgid "System Preferences..."
-msgstr "Preferências do Sistema..." 
-
-#: ../contents/ui/main.qml
-msgid "App Store..."
-msgstr "Loja de aplicativos..." 
-
-#: ../contents/ui/main.qml
-msgid "Force Quit..."
-msgstr "Forçar Encerramento..." 
-
-#: ../contents/ui/main.qml
-msgid "Sleep"
-msgstr "Repouso"
-
-#: ../contents/ui/main.qml
-msgid "Restart..."
-msgstr "Reiniciar..."
-
-#: ../contents/ui/main.qml
-msgid "Shut Down..."
-msgstr "Desligar..."
-
-#: ../contents/ui/main.qml
-msgid "Lock Screen"
-msgstr "Bloquear"
-
-#: ../contents/ui/main.qml
-msgid "Log Out"
-msgstr "Sair"
 
 #: ../contents/config/config.qml
 msgid "Advanced"
@@ -73,39 +37,75 @@ msgstr "Mostrar modo avançado"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "About This Computer :"
-msgstr "Sobre este computador :" 
+msgstr "Sobre este computador :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "kinfocenter"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "System Preferences :"
-msgstr "Preferências do Sistema :" 
+msgstr "Preferências do Sistema :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "systemsettings5"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "App Store :"
-msgstr "Loja de aplicativos :" 
+msgstr "Loja de aplicativos :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "plasma-discover"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Force Quit :"
-msgstr "Forçar Encerramento :" 
+msgstr "Forçar Encerramento :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "xkill"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Sleep :"
 msgstr "Repouso :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "systemctl suspend"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Restart :"
 msgstr "Reiniciar :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "/sbin/reboot"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Shut Down :"
 msgstr "Desligar :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "/sbin/shutdown now"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Lock Screen :"
 msgstr "Bloquear :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "qdbus org.freedesktop.ScreenSaver /ScreenSaver Lock"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Log Out :"
 msgstr "Finalizar Sessão :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "qdbus org.kde.ksmserver /KSMServer logout 0 0 0"
+msgstr ""
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Do you need help ?"
@@ -131,4 +131,38 @@ msgstr "Doe para o projeto"
 msgid "Couldn't find help ? Contact us at : info.kpple@gmail.com"
 msgstr "Não encontrou ajuda ? Entre em contato conosco no seguinte endereço : info.kpple@gmail.com"
 
- 
+#: ../contents/ui/main.qml
+msgid "About This Computer"
+msgstr "Sobre este computador"
+
+#: ../contents/ui/main.qml
+msgid "System Preferences..."
+msgstr "Preferências do Sistema..."
+
+#: ../contents/ui/main.qml
+msgid "App Store..."
+msgstr "Loja de aplicativos..."
+
+#: ../contents/ui/main.qml
+msgid "Force Quit..."
+msgstr "Forçar Encerramento..."
+
+#: ../contents/ui/main.qml
+msgid "Sleep"
+msgstr "Repouso"
+
+#: ../contents/ui/main.qml
+msgid "Restart..."
+msgstr "Reiniciar..."
+
+#: ../contents/ui/main.qml
+msgid "Shut Down..."
+msgstr "Desligar..."
+
+#: ../contents/ui/main.qml
+msgid "Lock Screen"
+msgstr "Bloquear"
+
+#: ../contents/ui/main.qml
+msgid "Log Out"
+msgstr "Sair"
