--- a/package/translate/ro.po
+++ b/package/translate/ro.po
@@ -6,50 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KppleMenu \n"
-"Report-Msgid-Bugs-To: https://github.com/kppleos/org.kpple.kppleMenu\n"
-"POT-Creation-Date: 2020-05-19\n"
+"Report-Msgid-Bugs-To: https://github.com/kppleos\n"
+"POT-Creation-Date: 2020-08-26 09:18+0200\n"
 "PO-Revision-Date: 2020-05-20\n"
 "Last-Translator: Borgniet Rudy <borgniet.rudy@hotmail.com>\n"
 "Language: ro\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-
-#: ../contents/ui/main.qml
-msgid "About This Computer"
-msgstr "Despre acest computer" 
-
-#: ../contents/ui/main.qml
-msgid "System Preferences..."
-msgstr "Preferințe de sistem..." 
-
-#: ../contents/ui/main.qml
-msgid "App Store..."
-msgstr "Magazin de aplicații..." 
-
-#: ../contents/ui/main.qml
-msgid "Force Quit..."
-msgstr "Închide forțat..." 
-
-#: ../contents/ui/main.qml
-msgid "Sleep"
-msgstr "Adoarme"
-
-#: ../contents/ui/main.qml
-msgid "Restart..."
-msgstr "Repornire..."
-
-#: ../contents/ui/main.qml
-msgid "Shut Down..."
-msgstr "Oprire..."
-
-#: ../contents/ui/main.qml
-msgid "Lock Screen"
-msgstr "Blocați ecranul"
-
-#: ../contents/ui/main.qml
-msgid "Log Out"
-msgstr "Deconectare"
 
 #: ../contents/config/config.qml
 msgid "Advanced"
@@ -73,39 +37,75 @@ msgstr "Afișați modul avansat"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "About This Computer :"
-msgstr "Despre acest computer :" 
+msgstr "Despre acest computer :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "kinfocenter"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "System Preferences :"
-msgstr "Preferințe de sistem :" 
+msgstr "Preferințe de sistem :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "systemsettings5"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "App Store :"
-msgstr "Magazin de aplicații :" 
+msgstr "Magazin de aplicații :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "plasma-discover"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Force Quit :"
-msgstr "Închide forțat :" 
+msgstr "Închide forțat :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "xkill"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Sleep :"
 msgstr "Adoarme :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "systemctl suspend"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Restart :"
 msgstr "Repornire :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "/sbin/reboot"
+msgstr ""
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Shut Down :"
 msgstr "Oprește :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "/sbin/shutdown now"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Lock Screen :"
 msgstr "Blocați ecranul :"
 
 #: ../contents/ui/config/configGeneral.qml
+msgid "qdbus org.freedesktop.ScreenSaver /ScreenSaver Lock"
+msgstr ""
+
+#: ../contents/ui/config/configGeneral.qml
 msgid "Log Out :"
 msgstr "Deconectare :"
+
+#: ../contents/ui/config/configGeneral.qml
+msgid "qdbus org.kde.ksmserver /KSMServer logout 0 0 0"
+msgstr ""
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Do you need help ?"
@@ -131,4 +131,38 @@ msgstr "Donează pentru proiect"
 msgid "Couldn't find help ? Contact us at : info.kpple@gmail.com"
 msgstr "Nu ați găsit ceea ce căutați ? Contactați-ne la următoarea adresă : info.kpple@gmail.com"
 
- 
+#: ../contents/ui/main.qml
+msgid "About This Computer"
+msgstr "Despre acest computer"
+
+#: ../contents/ui/main.qml
+msgid "System Preferences..."
+msgstr "Preferințe de sistem..."
+
+#: ../contents/ui/main.qml
+msgid "App Store..."
+msgstr "Magazin de aplicații..."
+
+#: ../contents/ui/main.qml
+msgid "Force Quit..."
+msgstr "Închide forțat..."
+
+#: ../contents/ui/main.qml
+msgid "Sleep"
+msgstr "Adoarme"
+
+#: ../contents/ui/main.qml
+msgid "Restart..."
+msgstr "Repornire..."
+
+#: ../contents/ui/main.qml
+msgid "Shut Down..."
+msgstr "Oprire..."
+
+#: ../contents/ui/main.qml
+msgid "Lock Screen"
+msgstr "Blocați ecranul"
+
+#: ../contents/ui/main.qml
+msgid "Log Out"
+msgstr "Deconectare"
