--- a/package/translate/uk.po
+++ b/package/translate/uk.po
@@ -1,20 +1,3 @@
-# Translation of tiledmenu in LANGUAGE
-# Copyright (C) Kpple 2020
-# This file is distributed under the same license as the Kpple Menu package.
-#
-#, fuzzy
-msgid ""
-msgstr ""
-"Project-Id-Version: KppleMenu \n"
-"Report-Msgid-Bugs-To: https://github.com/kppleos/org.kpple.kppleMenu\n"
-"POT-Creation-Date: 2020-05-19\n"
-"PO-Revision-Date: 2020-05-20\n"
-"Last-Translator: Borgniet Rudy <borgniet.rudy@hotmail.com>\n"
-"Language: uk\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-
 #: ../contents/ui/main.qml
 msgid "About This Computer"
 msgstr "Про цей комп’ютер" 
@@ -25,19 +8,19 @@ msgstr "Налаштування системи..."
 
 #: ../contents/ui/main.qml
 msgid "App Store..."
-msgstr "App Store..." 
+msgstr "Магазин застосунків..." 
 
 #: ../contents/ui/main.qml
 msgid "Force Quit..."
-msgstr "Сила кинути..." 
+msgstr "Вийти примусово..." 
 
 #: ../contents/ui/main.qml
 msgid "Sleep"
-msgstr "Пауза активність"
+msgstr "Режим очікування"
 
 #: ../contents/ui/main.qml
 msgid "Restart..."
-msgstr "Щоб перезапустити..."
+msgstr "Перезапуск..."
 
 #: ../contents/ui/main.qml
 msgid "Shut Down..."
@@ -73,7 +56,7 @@ msgstr "Показати розширений режим"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "About This Computer :"
-msgstr "Про цей комп’ютер :" 
+msgstr "Про цей комп'ютер :" 
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "System Preferences :"
@@ -81,19 +64,19 @@ msgstr "Налаштування системи :"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "App Store :"
-msgstr "App Store :" 
+msgstr "Магазин застосунків :" 
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Force Quit :"
-msgstr "Сила кинути :" 
+msgstr "Вийти примусово :" 
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Sleep :"
-msgstr "Пауза активність :"
+msgstr "Режим очікування :"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Restart :"
-msgstr "Щоб перезапустити :"
+msgstr "Перезапуск :"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Shut Down :"
@@ -129,6 +112,4 @@ msgstr "Пожертвуйте на проект"
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Couldn't find help ? Contact us at : info.kpple@gmail.com"
-msgstr "Не знайшли допомогу ? Звертайтесь до нас за наступною адресою : info.kpple@gmail.com"
-
- 
+msgstr "Не знайшли відповіді на питання ? Звертайтесь до нас за наступною адресою : info.kpple@gmail.com"
